# brainflow

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  brainflow_boards.json
GanglionBLEAPI/: Makefile
GanglionBLEAPI/Bglib/: callbacks.cpp  helpers.cpp  helpers.h  main.cpp  stubs.cpp
GanglionBLEAPI/GanglionLib/: Ganglion.cs
GanglionBLEAPI/Interface/: GanglionNativeInterface.h
GanglionBLEAPI/Mock/: GanglionNativeMock.cpp
cmake/: Config.cmake.in
cpp-package/: CMakeLists.txt  README.md
cpp-package/src/: board_info_getter.h  board_shim.cpp  board_shim.h  data_filter.cpp  data_filter.h  data_handler.cpp
cpp-package/src/inc/: board_shim.h  data_filter.h
csharp-package/brainflow/brainflow/: board_controller_library.cs  board_info_getter.cs  board_shim.cs  brainflow.csproj  brainflow.nuspec  brainflow.nuspec.in  data_filter.cs  data_handler_library.cs  library.cs  novaxr.cs
csharp-package/brainflow/test/: get_board_data.cs  test.csproj
docs/: AskHelp.rst  BrainFlowDev.rst  BrainFlowEmulator.rst  BuildBrainFlow.rst  DataFormatDesc.rst  Doxyfile.in  Examples.rst  SupportedBoards.rst  UserAPI.rst  conf.py  index.rst  requirements.txt
emulator/brainflow_emulator/: emulate_common.py  novaxr.py  novaxr_tcp.py  novaxr_udp.py  wifi_shield_emulator.py
java-package/: README.md  brainflow_formatter.xml
java-package/brainflow/: pom.xml
java-package/brainflow/src/main/java/: BoardInfoGetter.java  BoardShim.java  NOVAXR.java
java-package/brainflow/src/main/java/brainflow/: BoardIds.java  BoardShim.java  BrainFlowError.java  BrainFlowInputParams.java  DataFilter.java  ExitCode.java  FilterTypes.java  IpProtocolType.java  LogLevels.java  NOVAXR.java
java-package/brainflow/src/main/java/brainflow/examples/: BrainFlowGetData.java  Denoising.java  Transforms.java
java-package/brainflow/src/test/java/: BrainFlowTest.java
java-package/brainflow/src/test/java/brainflow/: BrainFlowTest.java
julia-package/brainflow/test/: serialization.jl
matlab-package/: BoardIDs.m  BoardShim.asv  BoardShim.m  BrainflowGetData.m  DataFilter.m  ExitCodes.m  FilterTypes.m  README.md  brainflow.mltbx  brainflow.prj
matlab-package/brainflow/: BoardShim.m  BoardsIds.m  brainflow_get_data.m  demos.xml  info.xml
matlab-package/brainflow/doc/: GettingStarted.mlx
matlab-package/brainflow/html/: brainflow_get_data.html
python-package/: setup.py
python-package/brainflow/: __init__.py  board_shim.py  data_filter.py  exit_codes.py
python-package/examples/: brainflow_get_data.py
r-package/brainflow/: NAMESPACE
r-package/brainflow/R/: board_shim.R
r-package/examples/: brainflow_get_data.R
src/board_controller/: board.cpp  board_controller.cpp  board_info_getter.cpp  file_streamer.cpp  streaming_board.cpp  synthetic_board.cpp
src/board_controller/brainbit/: brainbit.cpp
src/board_controller/brainbit/inc/: brainbit.h
src/board_controller/gtec/: unicorn_board.cpp
src/board_controller/inc/: board.h  board_controller.h  board_info_getter.h  brainflow_constants.h  file_streamer.h  streamer.h
src/board_controller/neuromd/: brainbit.cpp
src/board_controller/openbci/: cyton.cpp  cyton_daisy.cpp  cyton_daisy_wifi.cpp  cyton_wifi.cpp  ganglion.cpp  ganglion_wifi.cpp  novaxr.cpp  openbci_board.cpp  openbci_serial_board.cpp  openbci_wifi_shield_board.cpp
src/board_controller/openbci/ganglion_bglib/: main.cpp
src/board_controller/openbci/inc/: cyton.h  cyton_daisy.h  cyton_daisy_wifi.h  cyton_wifi.h  ganglion.h  ganglion_wifi.h  novaxr.h  openbci_board.h  openbci_serial_board.h  openbci_wifi_shield_board.h
src/data_handler/: data_handler.cpp
src/data_handler/inc/: data_handler.h  smooth_filter.h
src/utils/: data_buffer.h  multicast_client.cpp  multicast_server.cpp  runtime_dll_loader.h  serial.cpp  serial.h  socket.cpp  socket.h  socket_client.cpp  socket_client.h  socket_server.cpp  socket_server.h
tests/cpp/: CMakeLists.txt
tests/cpp/signal_processing_demo/src/: denoising.cpp  signal_filtering.cpp  transforms.cpp
tests/cpp/src/: brainflow_get_data.cpp
tests/csharp/multithread/: multithread.sln
tests/csharp/multithread/multithread/: ThreadCollector.cs  get_board_data.cs  multithread.csproj
tests/csharp/multithread/test/: App.config  ThreadCollector.cs  get_board_data.cs  test.csproj
tests/ipython-notebooks/: brainflow+MNE.ipynb
tests/java/: BrainFlowTest.java  BrainflowGetData.java
tests/python/: brainflow_analog_mode_other_data.py  brainflow_get_data.py  brainflow_multiboard_get_data.py  denoising.py  signal_filtering.py  test.csv  transforms.py
tests/r/: brainflow_get_data.R  denoising.R  downsampling.R  serialization.R  signal_filtering.R  transforms.R
tools/: build_linux.sh  dropbox_uploader.py
